Responsive css queries and improvements

--- a/compass/dev/_mixins.scss
+++ b/compass/dev/_mixins.scss
@@ -33,6 +33,10 @@
 			@include transition(background $transitionDuration ease-out);
 		}
 
+		@media all and (max-width: 749px) {
+			display: none;
+		}
+
 	}
 
 	main {
