--- a/compass/style.scss
+++ b/compass/style.scss
@@ -1,5 +1,6 @@
 @import 'compass';
 @import 'dev/_variables.scss';
+@import 'dev/_button.scss';
 @import 'dev/_mixins.scss';
 @import 'dev/_normalize.scss';
 @import 'dev/_icons.scss';
