--- a/compass/dev/_icons.scss
+++ b/compass/dev/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:    url('../fonts/icomoon.eot?awml6v');
-	src:    url('../fonts/icomoon.eot?awml6v#iefix') format('embedded-opentype'),
-	url('../fonts/icomoon.ttf?awml6v') format('truetype'),
-	url('../fonts/icomoon.woff?awml6v') format('woff'),
-	url('../fonts/icomoon.svg?awml6v#icomoon') format('svg');
+	src:    url('../fonts/icomoon.eot?g05r0n');
+	src:    url('../fonts/icomoon.eot?g05r0n#iefix') format('embedded-opentype'),
+	url('../fonts/icomoon.ttf?g05r0n') format('truetype'),
+	url('../fonts/icomoon.woff?g05r0n') format('woff'),
+	url('../fonts/icomoon.svg?g05r0n#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -24,22 +24,22 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-facebook:before {
+.icon-twitter:before {
 	content: "\e900";
 }
-.icon-googleplus:before {
+.icon-facebook:before {
 	content: "\e901";
 }
-.icon-mail:before {
+.icon-googleplus:before {
 	content: "\e902";
 }
-.icon-restart:before {
+.icon-tumblr:before {
 	content: "\e903";
 }
-.icon-tumblr:before {
+.icon-mail:before {
 	content: "\e904";
 }
-.icon-twitter:before {
+.icon-restart:before {
 	content: "\e905";
 }
 .icon-arrow-top:before {
@@ -54,3 +54,4 @@
 .icon-arrow-right:before {
 	content: "\e909";
 }
+
