--- a/compass/style.scss
+++ b/compass/style.scss
@@ -3,6 +3,7 @@
 @import 'dev/_button.scss';
 @import 'dev/_mixins.scss';
 @import 'dev/_normalize.scss';
+@import 'dev/_flexslider.scss';
 @import 'dev/_icons.scss';
 @import 'dev/_typedjs.scss';
 @import 'dev/_styles.scss';
