--- a/compass/dev/_styles.scss
+++ b/compass/dev/_styles.scss
@@ -406,10 +406,10 @@ main {
 		&:hover{
 			color:#fff;
 		}
-		&.left{
+		&.prev{
 			left: -5px;
 		}
-		&.right{
+		&.next{
 			right: -5px;
 		}
 		i{
@@ -422,17 +422,14 @@ main {
 		}
 	}
 
-	.msg-nav {
+	.control-nav {
 		width: 100%;
 		position: absolute;
 		bottom: 10px;
 		text-align: center;
-
-		ul{
-			margin:0;
-			padding:0;
-			list-style: none;
-		}
+		margin:0;
+		padding:0;
+		list-style: none;
 
 		li {
 			margin: 0 15px;
