--- a/public/css/style.css
+++ b/public/css/style.css
@@ -393,6 +393,63 @@ th {
   padding: 0;
 }
 
+/* ====================================================================================================================
+ * RESETS
+ * ====================================================================================================================*/
+.flex-container a:hover,
+.flex-slider a:hover {
+  outline: none;
+}
+
+.slides,
+.slides > li,
+.flex-control-nav,
+.flex-direction-nav {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.flex-pauseplay span {
+  text-transform: capitalize;
+}
+
+/* ====================================================================================================================
+ * BASE STYLES
+ * ====================================================================================================================*/
+.flexslider {
+  margin: 0;
+  padding: 0;
+}
+.flexslider .slides > li {
+  display: none;
+  -webkit-backface-visibility: hidden;
+}
+.flexslider .slides img {
+  width: 100%;
+  display: block;
+}
+.flexslider .slides:after {
+  content: "\0020";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+
+html[xmlns] .flexslider .slides {
+  display: block;
+}
+
+* html .flexslider .slides {
+  height: 1%;
+}
+
+.no-js .flexslider .slides > li:first-child {
+  display: block;
+}
+
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon.eot?g05r0n");
@@ -1409,10 +1466,10 @@ main .wrapper section input[type='text']:focus {
 #message-container .msg-slide:hover {
   color: #fff;
 }
-#message-container .msg-slide.left {
+#message-container .msg-slide.prev {
   left: -5px;
 }
-#message-container .msg-slide.right {
+#message-container .msg-slide.next {
   right: -5px;
 }
 #message-container .msg-slide i {
@@ -1425,25 +1482,23 @@ main .wrapper section input[type='text']:focus {
     display: none;
   }
 }
-#message-container .msg-nav {
+#message-container .control-nav {
   width: 100%;
   position: absolute;
   bottom: 10px;
   text-align: center;
-}
-#message-container .msg-nav ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-#message-container .msg-nav li {
+#message-container .control-nav li {
   margin: 0 15px;
   display: inline-block;
   zoom: 1;
   *display: inline;
   list-style: none;
 }
-#message-container .msg-nav li a {
+#message-container .control-nav li a {
   width: 7px;
   height: 7px;
   display: block;
@@ -1454,7 +1509,7 @@ main .wrapper section input[type='text']:focus {
   -moz-border-radius: 20px;
   border-radius: 20px;
 }
-#message-container .msg-nav li a:hover, #message-container .msg-nav li a.active {
+#message-container .control-nav li a:hover, #message-container .control-nav li a.active {
   border: 2px solid #fff;
   margin: -2px;
 }
