Changed "banquier" background color

--- a/public/css/postcard.css
+++ b/public/css/postcard.css
@@ -561,7 +561,7 @@ body .ic-boss {
   background-image: url("../images/05_boss_sel.svg");
 }
 body.bg-comptable-banquier {
-  background: #f1ccde;
+  background: #f4b7d1;
   color: #e3a7bf;
 }
 body .ic-comptable-banquier {
