--- a/public/css/postcard_static.css
+++ b/public/css/postcard_static.css
@@ -25,7 +25,7 @@ body.bg-boss {
   color: #98bbb8;
 }
 body.bg-comptable-banquier {
-  background: #f1ccde;
+  background: #f4b7d1;
   color: #e3a7bf;
 }
 body.bg-famille {
