--- a/compass/dev/_variables.scss
+++ b/compass/dev/_variables.scss
@@ -1,5 +1,5 @@
 $types: "client", "agence", "prospect", "boss", "comptable-banquier", "famille", "enfants", "belle-famille", "cible-amoureuse", "ex";
-$colours: #b8d4ec, #b9dabb, #d52685, #b2dbd7, #f1ccde, #d9d7d8, #f8d500, #4f4291, #ea332f, #164164;
+$colours: #b8d4ec, #b9dabb, #d52685, #b2dbd7, #f4b7d1, #d9d7d8, #f8d500, #4f4291, #ea332f, #164164;
 $fontColours: #7e94a5, #9ebaa0, #b42372, #98bbb8, #e3a7bf, #b9b9b9, #eab61a, #45387d, #c32f27, #10342b;
 $bgImages: "02_client", "01_agence", "09_prospect", "05_boss", "03_banquier", "10_famille", "07_enfants", "06_belle-famille", "08_cible amoureuse", "04_ex";
 $blueTextTitle: #2a00e5;
