--- a/compass/dev/_styles.scss
+++ b/compass/dev/_styles.scss
@@ -23,7 +23,7 @@ p{
 	min-height: 100%;
 
 
-	@include base-background(0.4s);
+	@include base-background(0.4s, #1200ff);
 
 }
 
@@ -60,7 +60,7 @@ p{
 	}
 
 	main{
-		background-color: #f1ebe5;
+		position: relative;
 		vertical-align: middle;
 		@media all and (max-width: 749px) {
 			display: none;
@@ -73,6 +73,37 @@ p{
 		@media all and (max-width: 749px) {
 			vertical-align: top;
 			display: block;
+		}
+	}
+
+}
+
+
+#start-screen{
+
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+
+	> div{
+		display: table;
+		width: 100%;
+		height: 100%;
+		> div{
+			display: table-cell;
+			width: 100%;
+			height: 100%;
+			vertical-align: middle;
+			padding:0 10%;
+			text-align: center;
+			h2 {
+				font-family: $playfairFontFamily;
+				font-weight: 700;
+				font-size:(40/16)+em;
+				color:#fff;
+			}
 		}
 	}
 
@@ -502,6 +533,8 @@ main {
 
 #final-block{
 
+	$marginBottom: 20;
+
 	font-family: $circularFontFamily;
 	text-align: center;
 	background: url('../images/voeux_loader.gif') no-repeat center center;
@@ -521,7 +554,7 @@ main {
 		@media all and (max-width: 480px){
 			width: 87%;
 		}
-		padding:80px 7px 0;
+		padding:60px 10px 0;
 		min-height: $sectionMinHeight;
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
@@ -533,7 +566,7 @@ main {
 		.sub-tit{
 			font-size:1.0em;
 			text-transform: uppercase;
-			margin-bottom: 4%;
+			min-height: (20+$marginBottom)+px;
 			font-weight: bold;
 		}
 
@@ -548,7 +581,7 @@ main {
 		}
 
 		.sep{
-			margin-bottom: 15%;
+			margin-bottom: 40px;
 		}
 
 		.tit{
@@ -556,12 +589,14 @@ main {
 			font-size:(36/16)+em;
 			@media all and (max-width: 910px) and (min-width:750px){
 				font-size:(32/16)+em;
-				margin-bottom: 15%;
+				min-height:(114+$marginBottom)+px;
 			}
 			@media all and (max-width: 450px){
 				font-size:(32/16)+em;
+				min-height:(114+$marginBottom)+px;
 			}
-			margin-bottom: 12%;
+			min-height:(129+$marginBottom)+px;
+
 			font-weight: 700;
 			line-height: 1.2;
 		}
