--- a/compass/dev/_postcard.scss
+++ b/compass/dev/_postcard.scss
@@ -100,7 +100,7 @@ main{
 		width: 100%;
 		height: 100%;
 		vertical-align: middle;
-		padding:0 20px;
+		padding:170px 20px 50px;
 	}
 
 	.title{
@@ -120,7 +120,7 @@ main{
 		@include transition(transform 0.8s ease-out, top 0.8s ease-out);
 		&.go-up{
 			@include transform(translate(0,0));
-			top:10%;
+			top:60px;
 			.typed-cursor{
 				opacity: 0;
 				visibility: hidden;
@@ -140,8 +140,31 @@ main{
 		}
 	}
 
-	#greetings-title, #greetings-message{
+	.website{
+		font-family: $playfairFontFamily;
+		font-size: 1em;
+		font-weight: bold;
+		a {
+			line-height: 1.2;
+			min-height: 23px;
+			display: inline-block;
+			@include transition(margin-top 0.5s ease-out);
+			margin-top:0px;
+			&.go-up{
+				margin-top:70px;
+			}
+			text-decoration: none;
+			color:inherit;
+		}
+	}
+
+	#greetings-title, #greetings-message, #greetings-website{
 		overflow: visible;
 		white-space: pre-wrap;
+		&.hide-cursor{
+			+ .typed-cursor{
+				visibility: hidden;
+			}
+		}
 	}
 }
