--- a/public/css/postcard.css
+++ b/public/css/postcard.css
@@ -704,7 +704,7 @@ main .wrapper > div {
   width: 100%;
   height: 100%;
   vertical-align: middle;
-  padding: 0 20px;
+  padding: 170px 20px 50px;
 }
 #second-step .title {
   font-family: "Playfair Display", "Times New Roman", serif;
@@ -735,7 +735,7 @@ main .wrapper > div {
   -ms-transform: translate(0, 0);
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
-  top: 10%;
+  top: 60px;
 }
 #second-step .title.go-up .typed-cursor {
   opacity: 0;
@@ -756,7 +756,30 @@ main .wrapper > div {
     font-size: 1.5em;
   }
 }
-#second-step #greetings-title, #second-step #greetings-message {
+#second-step .website {
+  font-family: "Playfair Display", "Times New Roman", serif;
+  font-size: 1em;
+  font-weight: bold;
+}
+#second-step .website a {
+  line-height: 1.2;
+  min-height: 23px;
+  display: inline-block;
+  -moz-transition: margin-top 0.5s ease-out;
+  -o-transition: margin-top 0.5s ease-out;
+  -webkit-transition: margin-top 0.5s ease-out;
+  transition: margin-top 0.5s ease-out;
+  margin-top: 0px;
+  text-decoration: none;
+  color: inherit;
+}
+#second-step .website a.go-up {
+  margin-top: 70px;
+}
+#second-step #greetings-title, #second-step #greetings-message, #second-step #greetings-website {
   overflow: visible;
   white-space: pre-wrap;
+}
+#second-step #greetings-title.hide-cursor + .typed-cursor, #second-step #greetings-message.hide-cursor + .typed-cursor, #second-step #greetings-website.hide-cursor + .typed-cursor {
+  visibility: hidden;
 }
